fix bug 546384, compacting with imap delete model can mess up offline store, and leak tmp files, r/sr=standard8